--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-select": "^2.2.5",
     "@tailwindcss/vite": "^4.1.7",
     "@tanstack/react-query": "^5.76.2",
     "husky": "^9.1.7",
